// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer blocks OnDemandHeading should render correctly - dark mode 1`] = `
.emotion-0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #F6F6F6;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

.emotion-2 {
  display: block;
  line-height: 1;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding-bottom: 1rem;
    word-break: break-word;
    line-height: 1.09;
  }
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-5 {
  display: inline-block;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (max-width: 22.5rem) and (min-width: 15rem) {
  .emotion-5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
  >
    <span
      role="text"
    >
      <span
        class="emotion-2 emotion-3"
        data-testid="brand-title"
      >
        Dunia Pagi Ini
      </span>
      <span
        class="emotion-4"
      >
        , 
      </span>
      <span
        class="emotion-5 emotion-6"
        data-testid="sub-heading"
      >
        27 April 2020
      </span>
    </span>
  </h1>
</div>
`;

exports[`AudioPlayer blocks OnDemandHeading should render correctly 1`] = `
.emotion-0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

.emotion-2 {
  display: block;
  line-height: 1;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding-bottom: 1rem;
    word-break: break-word;
    line-height: 1.09;
  }
}

.emotion-4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-5 {
  display: inline-block;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (max-width: 22.5rem) and (min-width: 15rem) {
  .emotion-5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
  >
    <span
      role="text"
    >
      <span
        class="emotion-2 emotion-3"
        data-testid="brand-title"
      >
        Dunia Pagi Ini
      </span>
      <span
        class="emotion-4"
      >
        , 
      </span>
      <span
        class="emotion-5 emotion-6"
        data-testid="sub-heading"
      >
        27 April 2020
      </span>
    </span>
  </h1>
</div>
`;
